setting up primeflex

--- a/mongocar/src/app/app.component.html
+++ b/mongocar/src/app/app.component.html
@@ -1,4 +1,11 @@
 <div>
-  <app-button></app-button>
+  <app-button label="check"></app-button>
+</div>
+<div>
+  <app-button label="Toogle Dark Mode" [onClick]=toggleDarkMode ></app-button>
 </div>
 <p>deveria existir um butao aqui</p>
+<div class="p-grid">
+  <div class="p-col -mb-8">Coluna 1</div>
+  <div class="p-col">Coluna 2</div>
+</div>
