studies of primeng themes

--- a/mongocar/src/app/app.component.html
+++ b/mongocar/src/app/app.component.html
@@ -6,6 +6,6 @@
 </div>
 <p>deveria existir um butao aqui</p>
 <div class="p-grid">
-  <div class="p-col -mb-8">Coluna 1</div>
+  <div class="p-col">Coluna 1</div>
   <div class="p-col">Coluna 2</div>
 </div>
