--- a/mongocar/src/styles.css
+++ b/mongocar/src/styles.css
@@ -1,4 +1,5 @@
 @import "primeflex/primeflex.css";
+@layer primeng, app-styles;
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -7,3 +8,8 @@
   border: 0;
   outline: 0;
 }
+
+/*:root {*/
+/*  color-scheme: light;*/
+/*}*/
+
