home component created. Initial style setted

--- a/mongocar/src/app/app.component.html
+++ b/mongocar/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div>
-  <app-button label="check"></app-button>
-</div>
-<div>
-  <app-button label="Toogle Dark Mode" [onClick]=toggleDarkMode ></app-button>
-</div>
-<p>deveria existir um butao aqui</p>
-<div class="p-grid">
-  <div class="p-col">Coluna 1</div>
-  <div class="p-col">Coluna 2</div>
-</div>
+<app-home></app-home>
