--- a/mongocar/src/styles.css
+++ b/mongocar/src/styles.css
@@ -1,4 +1,6 @@
 @import "primeflex/primeflex.css";
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @layer primeng, app-styles;
 
 *, *:before, *:after {
@@ -9,7 +11,13 @@
   outline: 0;
 }
 
-/*:root {*/
-/*  color-scheme: light;*/
-/*}*/
+body {
+  font-family: 'Orbitron', 'Roboto', Times, "Times New Roman", Georgia, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+
 
