--- a/mongocar/src/styles.css
+++ b/mongocar/src/styles.css
@@ -15,8 +15,8 @@ body {
   font-family: 'Orbitron', 'Roboto', Times, "Times New Roman", Georgia, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
-  color: #333;
+  background-color: var(--p-surface-400);
+  color: var(--p-primary-color);
 }
 
 
