--- a/mongocar/src/app/pages/home/home.component.html
+++ b/mongocar/src/app/pages/home/home.component.html
@@ -4,9 +4,9 @@
 </header>
 
 <nav>
-  <a href="#servicos">Serviços</a>
-  <a href="#sobre">Sobre Nós</a>
-  <a href="#contato">Contato</a>
+  <app-button routerLink="/servicos" label="servicos" severity="contrast" />
+  <app-button label="sobre" severity="contrast" />
+  <app-button label="contato" severity="contrast" />
 </nav>
 
 <section class="hero">
