--- a/mongocar/src/app/shared/components/button/button.component.html
+++ b/mongocar/src/app/shared/components/button/button.component.html
@@ -1,3 +1,9 @@
 <div class="card flex justify-center">
-  <p-button [severity]="severity" [variant]="variant" [label]="label" (onClick)="onClick()"></p-button>
+  <p-button [severity]="severity"
+            [variant]="variant"
+            [link]=link
+            [label]="label"
+            [size]=size
+            [styleClass]="styleClass"
+            (onClick)="onClick()"></p-button>
 </div>
