--- a/mongocar/src/styles.css
+++ b/mongocar/src/styles.css
@@ -1,7 +1,7 @@
 @import "primeflex/primeflex.css";
+@import "primeicons/primeicons.css";
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-@layer primeng, app-styles;
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -14,6 +14,9 @@ body {
   background-color: var(--p-surface-500);
   color: var(--p-primary-color);
 }
+
+
+
 
 
 
