--- a/mongocar/src/app/shared/components/menu/menu.component.html
+++ b/mongocar/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="card flex justify-center absolute top-0 right-0">
-  <p-menu #menu [model]="items" [popup]="true" ngClass="relative top-0 left-0" />
-  <p-button (onClick)="menu.toggle($event)" ngClass="testando" icon="pi pi-bars"/>
+<div class="card flex justify-center">
+  <p-menu appendTo=".card" #menu [model]="items" [popup]="true" />
+  <p-button (onClick)="menu.toggle($event)" icon="pi pi-bars"/>
 </div>
