--- a/mongocar/src/app/shared/components/button/button.component.html
+++ b/mongocar/src/app/shared/components/button/button.component.html
@@ -5,5 +5,6 @@
             [label]="label"
             [size]=size
             [styleClass]="styleClass"
-            (onClick)="onClick()"></p-button>
+            (onClick)="onClick()"
+            [type]="type"></p-button>
 </div>
