ToastService created. p-toast is being used.

--- a/mongocar/src/app/shared/components/button/button.component.html
+++ b/mongocar/src/app/shared/components/button/button.component.html
@@ -6,5 +6,6 @@
             [size]=size
             [styleClass]="styleClass"
             (onClick)="onClick()"
+            [disabled]="disable"
             [type]="type"></p-button>
 </div>
