--- a/mongocar/src/app/pages/logon/logon.component.html
+++ b/mongocar/src/app/pages/logon/logon.component.html
@@ -92,6 +92,7 @@
       <app-button
         label="Registrar"
         type="submite"
+        [disable]=registerForm.invalid
       ></app-button>
 
       <div class="opcao">
