AuthService implemented. About component was created. jwt-decode is a dependency now.

--- a/mongocar/src/app/pages/home/home.component.html
+++ b/mongocar/src/app/pages/home/home.component.html
@@ -5,8 +5,8 @@
 
 <nav>
   <app-button routerLink="/servicos" label="servicos" severity="contrast" />
-  <app-button label="sobre" severity="contrast" />
-  <app-button label="contato" severity="contrast" />
+  <app-button routerLink="/sobrenos" label="sobre" severity="contrast" />
+  <app-button routerLink="/sobrenos#contact" label="contato" severity="contrast" />
 </nav>
 
 <section class="hero">
