header component created. Its shows different information depending on login status.

--- a/mongocar/src/app/app.component.html
+++ b/mongocar/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-toast></app-toast>
-<app-menu [items]="menuItens"></app-menu>
+<app-header></app-header>
+<!--<app-menu [items]="menuItens"></app-menu>-->
 <router-outlet></router-outlet>
