--- a/mongocar/src/app/shared/components/header/header.component.html
+++ b/mongocar/src/app/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
   <nav *ngIf="isLoggedIn()">
     <app-button *ngIf="isCustomer()" routerLink="/customer-dashboard" label="Dashboard" severity="contrast"></app-button>
     <app-button *ngIf="isEmployee()" routerLink="/employee-dashboard" label="Painel Admin" severity="contrast"></app-button>
-    <app-button routerLink="/profile" label="Perfil" severity="contrast"></app-button>
+    <app-button [routerLink]="profileRouterLink" label="Perfil" severity="contrast"></app-button>
   </nav>
 
   <div class="user-info" *ngIf="isLoggedIn()">
