--- a/mongocar/src/styles.css
+++ b/mongocar/src/styles.css
@@ -3,6 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+html{
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  height: 100vh;
+}
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -13,6 +19,7 @@ body {
   padding: 0;
   background-color: var(--p-surface-500);
   color: var(--p-primary-color);
+  height: 100%;
 }
 
 
