employee list was created. It's used in second tab of admin panel.

--- a/mongocar/src/app/app.component.html
+++ b/mongocar/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-toast></app-toast>
+<p-confirm-dialog />
 <app-header></app-header>
 <!--<app-menu [items]="menuItens"></app-menu>-->
 <router-outlet></router-outlet>
