employee name inside list of employees is a set as a link button that should send to a detailed page of employee.

--- a/mongocar/src/app/pages/admin/tabs/employees-list/employees-list.component.html
+++ b/mongocar/src/app/pages/admin/tabs/employees-list/employees-list.component.html
@@ -11,7 +11,7 @@
     </ng-template>
     <ng-template pTemplate="body" let-employee>
       <tr>
-        <td>{{ employee.name }}</td>
+        <td><app-button [link]="true" routerLink="RotaParaDetalhesDoEmpregado" label="{{ employee.name }}"></app-button></td>
         <td>{{ employee.position }}</td>
         <td>{{ employee.salary | currency:'BRL':'symbol':'1.2-2' }}</td>
         <td>
