--- a/mongocar/src/app/shared/components/header/header.component.html
+++ b/mongocar/src/app/shared/components/header/header.component.html
@@ -3,7 +3,7 @@
 
   <nav *ngIf="isLoggedIn()">
     <app-button *ngIf="isCustomer()" routerLink="/customer-dashboard" label="Dashboard" severity="contrast"></app-button>
-    <app-button *ngIf="isEmployee()" routerLink="/employee-dashboard" label="Painel Admin" severity="contrast"></app-button>
+    <app-button *ngIf="isEmployee()" routerLink="/dashboard" label="Painel Admin" severity="contrast"></app-button>
     <app-button [routerLink]="profileRouterLink" label="Perfil" severity="contrast"></app-button>
   </nav>
 
