--- a/mongocar/src/app/pages/admin/tabs/employees-list/employees-list.component.html
+++ b/mongocar/src/app/pages/admin/tabs/employees-list/employees-list.component.html
@@ -1,26 +1,27 @@
 <div class="employee-list-container">
   <h1>Lista de Funcionários</h1>
-  <p-table [value]="employees" [paginator]="true" [rows]="10">
-    <ng-template pTemplate="header">
-      <tr>
-        <th>Nome</th>
-        <th>Cargo</th>
-        <th>Salário</th>
-        <th>Ações</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-employee>
-      <tr>
-        <td><app-button [link]="true" routerLink="RotaParaDetalhesDoEmpregado" label="{{ employee.name }}"></app-button></td>
-        <td>{{ employee.position }}</td>
-        <td>{{ employee.salary | currency:'BRL':'symbol':'1.2-2' }}</td>
-        <td>
-          <button pButton type="button" icon="pi pi-pencil" class="p-button-success p-mr-2" (click)="openEditDialog(employee)"></button>
-          <button pButton type="button" icon="pi pi-trash" class="p-button-danger" (click)="deleteEmployee(employee)"></button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <app-table [cols]="columns" [data]="employees"></app-table>
+<!--  <p-table [value]="employees" [paginator]="true" [rows]="10">-->
+<!--    <ng-template pTemplate="header">-->
+<!--      <tr>-->
+<!--        <th>Nome</th>-->
+<!--        <th>Cargo</th>-->
+<!--        <th>Salário</th>-->
+<!--        <th>Ações</th>-->
+<!--      </tr>-->
+<!--    </ng-template>-->
+<!--    <ng-template pTemplate="body" let-employee>-->
+<!--      <tr>-->
+<!--        <td><app-button [link]="true" routerLink="RotaParaDetalhesDoEmpregado" label="{{ employee.name }}"></app-button></td>-->
+<!--        <td>{{ employee.position }}</td>-->
+<!--        <td>{{ employee.salary | currency:'BRL':'symbol':'1.2-2' }}</td>-->
+<!--        <td>-->
+<!--          <button pButton type="button" icon="pi pi-pencil" class="p-button-success p-mr-2" (click)="openEditDialog(employee)"></button>-->
+<!--          <button pButton type="button" icon="pi pi-trash" class="p-button-danger" (click)="deleteEmployee(employee)"></button>-->
+<!--        </td>-->
+<!--      </tr>-->
+<!--    </ng-template>-->
+<!--  </p-table>-->
 
   <!-- Modal de Edição -->
   <p-dialog [(visible)]="displayEditDialog" [style]="{ width: '450px' }" header="Editar Funcionário" [modal]="true">
