table.component has p-table from prime ng.

--- a/mongocar/src/app/shared/components/primeng/button/button.component.html
+++ b/mongocar/src/app/shared/components/primeng/button/button.component.html
@@ -6,7 +6,7 @@
     [label]="label"
     [size]=size
     [styleClass]="styleClass"
-    (onClick)="onClick()"
+    (onClick)="handleClick()"
     [disabled]="disable"
     [type]="type"
     [icon]="icon"
